css changes to fix issue on mobile view

--- a/src/app/components/core/control-dispatcher/api-flow/add-edit-api-flow/add-edit-api-flow.component.css
+++ b/src/app/components/core/control-dispatcher/api-flow/add-edit-api-flow/add-edit-api-flow.component.css
@@ -83,3 +83,7 @@ span.is-small {
     font-size: 0.7em;
     color: gray;
 }
+
+.execute-dropdown {
+    width: unset;
+}
