--- a/src/app/components/core/support/support.component.css
+++ b/src/app/components/core/support/support.component.css
@@ -10,3 +10,7 @@
 .is-hovered {
   cursor: pointer !important;
 }
+
+.help-pad {
+  margin-right: 0.7rem;
+}
